--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,17 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: UseNode@1
+  inputs:
+    version: '12.x'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: 'Web-Scrutineer/Scrutineer-Client'
+- task: CmdLine@2
+  inputs:
+    script: 'npm run dev:build'
+    workingDirectory: 'Web-Scrutineer/Scrutineer-Client'
+
+
