--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Data-BuildModule"]
 	path = Data-BuildModule
-	url = https://dev.azure.com/turn10/Services/_git/Data-BuildModule
+	url = https://turn10.visualstudio.com/Services/_git/Data-BuildModule
 	branch = master
