--- a/ScrutineerClient/package.json
+++ b/ScrutineerClient/package.json
@@ -73,6 +73,7 @@
     "karma-nightmare": "~0.4.15",
     "logops": "~2.1.0",
     "make-runnable": "~1.3.6",
+    "prettier": "2.1.1",
     "regexp-replace-loader": "^1.0.1",
     "replace-in-file": "^4.2.0",
     "ts-loader": "~6.0.4",
