setup new environment in angular to use dev api

--- a/ScrutineerClient/angular.json
+++ b/ScrutineerClient/angular.json
@@ -47,6 +47,23 @@
                 "vendorChunk": false,
                 "buildOptimizer": true
             },
+            "dev-api": {
+                "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.ts",
+                    "with": "src/environments/environment.localUiDevApi.ts"
+                  }
+                ],
+                "optimization": true,
+                "outputHashing": "all",
+                "sourceMap": false,
+                "extractCss": true,
+                "namedChunks": false,
+                "aot": true,
+                "extractLicenses": true,
+                "vendorChunk": false,
+                "buildOptimizer": true
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -72,6 +89,9 @@
             "browserTarget": "angular-zendesk:build"
           },
           "configurations": {
+            "dev-api": {
+                "browserTarget": "angular-zendesk:build:dev-api"
+            },
             "production": {
               "browserTarget": "angular-zendesk:build:production"
             }
