--- a/ScrutineerClient/package.json
+++ b/ScrutineerClient/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "lint": "ng lint",
     "start": "ng serve",
+    "start:devapi": "ng serve --configuration=dev-api",
     "configMoveToBuild": "cp web.config dist/",
     "local:test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
     "local:test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
