--- a/ScrutineerClient/angular.json
+++ b/ScrutineerClient/angular.json
@@ -20,13 +20,18 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/assets", "src/translations", "src/manifest.json"],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": []
           },
           "configurations": {
             "dev": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -44,6 +49,12 @@
               "buildOptimizer": true
             },
             "dev-api": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -61,6 +72,12 @@
               "buildOptimizer": true
             },
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -107,7 +124,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": [],
