--- a/ScrutineerClient/package.json
+++ b/ScrutineerClient/package.json
@@ -18,49 +18,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.2",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.2",
-    "@angular/compiler": "~8.2.2",
-    "@angular/core": "~8.2.2",
+    "@angular/animations": "^10.1.0",
+    "@angular/cdk": "^10.1.0",
+    "@angular/common": "~10.1.0",
+    "@angular/compiler": "~10.1.0",
+    "@angular/core": "~10.1.0",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.2",
-    "@angular/material": "^8.1.3",
-    "@angular/platform-browser": "~8.2.2",
-    "@angular/platform-browser-dynamic": "~8.2.2",
-    "@angular/pwa": "~0.803.12",
-    "@angular/router": "~8.2.2",
-    "@angular/service-worker": "~8.2.2",
+    "@angular/forms": "~10.1.0",
+    "@angular/localize": "^10.1.0",
+    "@angular/platform-browser": "~10.1.0",
+    "@angular/platform-browser-dynamic": "~10.1.0",
+    "@angular/pwa": "~0.1001.0",
+    "@angular/router": "~10.1.0",
+    "@angular/service-worker": "~10.1.0",
     "@azure/msal-angular": "^1.0.0",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@nguniversal/express-engine": "~8.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "~8.1.1",
-    "@ngxs/router-plugin": "^3.4.3",
-    "@ngxs/store": "^3.4.3",
-    "core-js": "^3.2.1",
+    "@nguniversal/express-engine": "~10.1.0",
+    "@ngxs/router-plugin": "^3.6.2",
+    "@ngxs/store": "^3.6.2",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
-    "msal": "^1.3.3",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "msal": "^1.4.0",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.1",
     "zendesk_app_framework_sdk": "^2.0.11",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "~8.2.2",
-    "@angular/compiler-cli": "~8.2.2",
-    "@angular/platform-server": "8.2.2",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "~10.1.0",
+    "@angular/compiler-cli": "~10.1.0",
+    "@angular/platform-server": "10.1.0",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@ngxs/devtools-plugin": "^3.4.3",
     "@types/applicationinsights-js": "~1.0.9",
-    "@types/gapi.youtube": "~3.0.34",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "12.7.2",
-    "@types/youtube": "~0.0.35",
     "codelyzer": "^5.0.1",
     "copyfiles": "~2.1.0",
     "express-logging": "~1.1.1",
@@ -82,8 +79,7 @@
     "ts-loader": "~6.0.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.3",
-    "typescript": "~3.5.3",
-    "watch": "^1.0.2",
+    "typescript": "~3.9.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "~3.3.7"
   }
