Add NG Materials

--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -6,14 +6,15 @@
     "lint": "ng lint",
     "format": "prettier --write .",
     "start": "ng serve",
-    "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
-    "start:devapi": "ng serve --configuration=dev-api",
     "configMoveToBuild": "cp web.config dist/",
     "local:test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
     "local:test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
     "vsts:test": "ng test --code-coverage --karma-config=src/karma-vsts.conf.js",
     "vsts:test:ncc": "ng test --karma-config=src/karma-vsts.conf.js",
     "dev:build": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && npm run configMoveToBuild",
+    "dev:zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
+    "dev:start": "ng serve --configuration=dev-api",
+    "dev:start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
     "prod:build": "(ng build --prod --configuration=production --crossOrigin=anonymous --subresource-integrity=true) && npm run configMoveToBuild"
   },
   "private": true,
@@ -26,6 +27,7 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~10.1.0",
     "@angular/localize": "^10.1.0",
+    "@angular/material": "^10.2.0",
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/pwa": "~0.1001.0",
