OOS requirements for .net and npm sources

--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -2,6 +2,7 @@
   "name": "forza-support-inventory-angular",
   "version": "0.0.1",
   "scripts": {
+    "refreshVSToken": "vsts-npm-auth -config .npmrc",
     "ng": "ng",
     "lint": "ng lint",
     "format": "prettier --write .",
