--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forza-support-inventory-angular",
+  "name": "turn10-steward-ui",
   "version": "0.0.1",
   "scripts": {
     "refreshVSToken": "vsts-npm-auth -config .npmrc",
