--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@microsoft/applicationinsights-web": "^2.5.8",
     "@nguniversal/express-engine": "~10.1.0",
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
