--- a/StewardClient/tsconfig.json
+++ b/StewardClient/tsconfig.json
@@ -15,6 +15,12 @@
     "lib": ["es2017", "dom", "dom.iterable"],
     "paths": {
       "@environments/*": ["environments/*"],
+      "@components/*": ["app/shared/components/*"],
+      "@helpers/*": ["app/shared/helpers/*"],
+      "@interceptors/*": ["app/shared/interceptors/*"],
+      "@mocks/*": ["app/shared/mocks/*"],
+      "@models/*": ["app/shared/models/*"],
+      "@services/*": ["app/shared/services/*"],
       "@shared/*": ["app/shared/*"]
     },
     "allowSyntheticDefaultImports": true
