--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "~10.1.0",
+    "@angular/cli": "^10.1.3",
     "@angular/compiler-cli": "~10.1.0",
     "@angular/platform-server": "10.1.0",
     "@babel/core": "^7.9.6",
