--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -13,10 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": [
-              "hammerjs",
-              "minimatch"
-            ],
+            "allowedCommonJsDependencies": ["hammerjs", "minimatch"],
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
