--- a/StewardClient/src/tsconfig.app.json
+++ b/StewardClient/src/tsconfig.app.json
@@ -5,12 +5,7 @@
     "baseUrl": "./",
     "types": ["node", "jasmine"]
   },
-  "files": [
-    "main.ts",
-    "polyfills.ts"
-  ],
-  "include": [
-    "**/*.d.ts"
-  ],
+  "files": ["main.ts", "polyfills.ts"],
+  "include": ["**/*.d.ts"],
   "exclude": ["./test.ts", "**/*.spec.ts", "**/*.mock.ts"]
 }
