--- a/StewardClient/app-local/manifest.json
+++ b/StewardClient/app-local/manifest.json
@@ -9,7 +9,7 @@
   "private": true,
   "location": {
     "support": {
-      "nav_bar": "http://localhost:4200/sidebar",
+      "nav_bar": "http://localhost:4200/navbar-app",
       "ticket_sidebar": "http://localhost:4200/ticket-sidebar",
       "background": "assets/background.html"
     }
