--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -24,7 +24,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/assets", "src/translations", "src/manifest.json"],
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/global.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/global.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -126,7 +129,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/global.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/global.scss"
+            ],
             "scripts": [],
             "assets": ["src/assets"],
             "codeCoverageExclude": [
