--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -28,6 +28,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [""]
+            },
             "scripts": []
           },
           "configurations": {
@@ -133,6 +136,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [""]
+            },
             "scripts": [],
             "assets": ["src/assets"],
             "codeCoverageExclude": [
