--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": ["hammerjs", "minimatch"],
+            "allowedCommonJsDependencies": ["hammerjs", "minimatch", "lodash"],
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
