--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -28,7 +28,7 @@
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.4",
     "@angular/localize": "^10.1.4",
-    "@angular/material": "^10.2.3",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/pwa": "~0.1001.0",
@@ -61,6 +61,7 @@
     "@types/applicationinsights-js": "~1.0.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.162",
     "@types/node": "12.7.2",
     "codelyzer": "^5.0.1",
     "copyfiles": "~2.1.0",
