--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -43,7 +43,9 @@
     "@nguniversal/express-engine": "~10.1.0",
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
+    "@types/faker": "^5.1.3",
     "core-js": "^3.6.5",
+    "faker": "^5.1.0",
     "hammerjs": "^2.0.8",
     "msal": "^1.4.0",
     "rxjs": "~6.6.3",
