--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -5,7 +5,8 @@
     "refreshVSToken": "vsts-npm-auth -config .npmrc",
     "ng": "ng",
     "lint": "ng lint",
-    "format": "prettier --write .",
+    "prettier:fix": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "start": "ng serve",
     "configMoveToBuild": "cp web.config dist/",
     "local:test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
