--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -48,6 +48,7 @@
     "core-js": "^3.6.5",
     "faker": "^5.1.0",
     "hammerjs": "^2.0.8",
+    "json-bigint": "^1.0.0",
     "msal": "^1.4.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.1",
