--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -7,18 +7,24 @@
     "lint": "ng lint",
     "prettier:fix": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "start": "ng serve",
+
     "configMoveToBuild": "cp web.config dist/",
-    "local:test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
-    "local:test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
-    "local:test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
-    "vsts:test": "ng test --code-coverage --karma-config=src/karma-vsts.conf.js",
-    "vsts:test:ncc": "ng test --karma-config=src/karma-vsts.conf.js",
-    "dev:build": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && npm run configMoveToBuild",
-    "dev:zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
-    "dev:start": "ng serve --configuration=dev-api",
-    "dev:start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
-    "prod:build": "(ng build --prod --configuration=production --crossOrigin=anonymous --subresource-integrity=true) && npm run configMoveToBuild"
+    
+    "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
+    "debug-open:ff": "\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -start-debugger-server",
+
+    "start:local-api": "ng serve",
+    "start": "ng serve --configuration=dev-api",
+    "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
+
+    "test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
+    "test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
+    "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
+
+    "ado-test": "ng test --code-coverage --karma-config=src/karma-vsts.conf.js",
+    "ado-test:ncc": "ng test --karma-config=src/karma-vsts.conf.js",
+    "ado-build:dev": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && npm run configMoveToBuild",
+    "ado-build:prod": "(ng build --prod --configuration=production --crossOrigin=anonymous --subresource-integrity=true) && npm run configMoveToBuild"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +51,7 @@
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
     "@types/faker": "^5.1.3",
+    "@types/json-bigint": "^1.0.0",
     "core-js": "^3.6.5",
     "faker": "^5.1.0",
     "hammerjs": "^2.0.8",
