--- a/StewardClient/.prettierignore
+++ b/StewardClient/.prettierignore
@@ -1,3 +1,9 @@
+# output directories should not be scanned
 dist/
 coverage/
-package-lock.json
+
+# external packages should not be scanned
+node_modules
+
+# prettier thinks json should not have whitespace
+*.json
