--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -30,7 +30,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/assets", "src/translations", "src/manifest.json"],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": []
@@ -135,7 +135,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": [],
