--- a/StewardClient/.yarnrc
+++ b/StewardClient/.yarnrc
@@ -1,1 +1,1 @@
-registry https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services/npm/registry/
+registry "https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services/npm/registry/"
