--- a/StewardClient/src/tsconfig.app.json
+++ b/StewardClient/src/tsconfig.app.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "types": ["node", "jasmine"]
   },
-  "files": ["main.ts", "polyfills.ts"],
+  "files": ["main.ts", "polyfills.ts", "app/shared/interceptors/fake-api/fake-api.interceptor.ts"],
   "include": ["**/*.d.ts"],
   "exclude": ["./test.ts", "**/*.spec.ts", "**/*.mock.ts"]
 }
