--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -28,9 +28,12 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/assets", "src/translations", "src/manifest.json"],
+            "assets": [
+              "src/assets",
+              "src/translations",
+              "src/manifest.json"
+            ],
             "styles": [
-              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": []
@@ -135,11 +138,12 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/global.scss"
             ],
             "scripts": [],
-            "assets": ["src/assets"],
+            "assets": [
+              "src/assets"
+            ],
             "codeCoverageExclude": [
               "/**/fake-api/**/*.ts",
               "/**/polyfills.ts",
@@ -151,11 +155,25 @@
             ]
           }
         },
-        "lint": {
+        "tslint": { // this can be deleted after commit
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.component.html"
+            ]
           }
         }
       }
