--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular-eslint/eslint-plugin": "0.6.0-beta.0",
     "@angular/cli": "^10.1.3",
     "@angular/compiler-cli": "~10.1.4",
     "@angular/platform-server": "10.1.4",
@@ -70,8 +71,16 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.162",
     "@types/node": "12.7.2",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
+    "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^5.0.1",
     "copyfiles": "~2.1.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.7",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "express-logging": "~1.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -93,6 +102,10 @@
     "tslint": "~6.1.3",
     "typescript": "~3.9.2",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "~3.3.7"
+    "webpack-cli": "~3.3.7",
+    "@angular-eslint/builder": "0.6.0-beta.0",
+    "@angular-eslint/eslint-plugin-template": "0.6.0-beta.0",
+    "@angular-eslint/schematics": "^0.6.0-beta.0",
+    "@angular-eslint/template-parser": "0.6.0-beta.0"
   }
 }
