--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -59,7 +59,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular-eslint/builder": "0.6.0-beta.0",
     "@angular-eslint/eslint-plugin": "0.6.0-beta.0",
+    "@angular-eslint/eslint-plugin-template": "0.6.0-beta.0",
+    "@angular-eslint/schematics": "^0.6.0-beta.0",
+    "@angular-eslint/template-parser": "0.6.0-beta.0",
     "@angular/cli": "^10.1.3",
     "@angular/compiler-cli": "~10.1.4",
     "@angular/platform-server": "10.1.4",
@@ -102,10 +106,6 @@
     "tslint": "~6.1.3",
     "typescript": "~3.9.2",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "~3.3.7",
-    "@angular-eslint/builder": "0.6.0-beta.0",
-    "@angular-eslint/eslint-plugin-template": "0.6.0-beta.0",
-    "@angular-eslint/schematics": "^0.6.0-beta.0",
-    "@angular-eslint/template-parser": "0.6.0-beta.0"
+    "webpack-cli": "~3.3.7"
   }
 }
