--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -5,6 +5,7 @@
     "refreshVSToken": "vsts-npm-auth -config .npmrc",
     "ng": "ng",
     "lint": "ng lint",
+    "eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
     "prettier:fix": "prettier --write .",
     "prettier:check": "prettier --check .",
     "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
