--- a/StewardClient/.prettierrc
+++ b/StewardClient/.prettierrc
@@ -2,6 +2,6 @@
   "arrowParens": "avoid",
   "singleQuote": true,
   "printWidth": 80,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "endOfLine": "auto"
 }
