--- a/StewardClient/angular.json
+++ b/StewardClient/angular.json
@@ -28,14 +28,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/assets",
-              "src/translations",
-              "src/manifest.json"
-            ],
-            "styles": [
-              "src/global.scss"
-            ],
+            "assets": ["src/assets", "src/translations", "src/manifest.json"],
+            "styles": ["src/global.scss"],
             "scripts": []
           },
           "configurations": {
@@ -137,13 +131,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/global.scss"
-            ],
+            "styles": ["src/global.scss"],
             "scripts": [],
-            "assets": [
-              "src/assets"
-            ],
+            "assets": ["src/assets"],
             "codeCoverageExclude": [
               "/**/fake-api/**/*.ts",
               "/**/polyfills.ts",
@@ -155,16 +145,12 @@
             ]
           }
         },
-        "tslint": { // this can be deleted after commit
+        "tslint": {
+          // this can be deleted after commit
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         },
         "lint": {
@@ -173,10 +159,7 @@
             "eslintConfig": ".eslintrc.js",
             "fix": true,
             "cache": true,
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.component.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.component.html"]
           }
         }
       }
