navbar-app/navbar-app -> navbar-app/tools

--- a/StewardClient/app-prod/manifest.json
+++ b/StewardClient/app-prod/manifest.json
@@ -9,7 +9,7 @@
   "private": true,
   "location": {
     "support": {
-      "nav_bar": "https://steward-ui-prod.azurewebsites.net/navbar-app",
+      "nav_bar": "https://steward-ui-prod.azurewebsites.net/navbar-app/tools",
       "ticket_sidebar": "https://steward-ui-prod.azurewebsites.net/ticket-sidebar",
       "background": "assets/background.html"
     }
