trying to get this to not include things it should not...

--- a/StewardApiTests/.gitignore
+++ b/StewardApiTests/.gitignore
@@ -663,3 +663,11 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# Added by OneITVSO 
+*.dll
+*.exe
