updated dependcy packages for angular 11

--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -29,7 +29,7 @@
     "@angular/common": "~10.1.4",
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "11.0.0-beta.33",
     "@angular/forms": "~10.1.4",
     "@angular/localize": "^10.1.4",
     "@angular/material": "^10.2.3",
@@ -79,7 +79,7 @@
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
     "@typescript-eslint/parser": "4.3.0",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "6.0.1",
     "copyfiles": "~2.1.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.15.0",
