--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -45,6 +45,7 @@
     "@microsoft/applicationinsights-web": "^2.5.8",
     "@nguniversal/express-engine": "~11.0.0",
     "@ngxs/router-plugin": "^3.7.0",
+    "@ngxs/storage-plugin": "^3.7.1",
     "@ngxs/store": "^3.7.0",
     "@types/faker": "^5.1.3",
     "@types/json-bigint": "^1.0.0",
