revert kusto config changes

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -19,7 +19,7 @@
   "BlobConnectionSecretName": "blob-connection-string",
   "GroupGiftingPasswordSecretName": "lsp-group-gifting-password",
   "KustoConfiguration": {
-    "KeyVaultName": "steward-keyvault-prod",
+    "KeyVaultName": "steward-keyvault-dev",
     "ClientSecret": "",
     "Database": "T10Analytics",
     "ClientId": "0c06ce63-d1a3-4869-86a0-89ff67b106eb",
@@ -27,9 +27,9 @@
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47"
   },
   "KustoLoggerConfiguration": {
-    "KeyVaultName": "steward-keyvault-prod",
+    "KeyVaultName": "steward-keyvault-dev",
     "ClientSecret": "",
-    "Database": "Live Ops Tools Prod",
+    "Database": "Live Ops Tools Dev",
     "ClientId": "0c06ce63-d1a3-4869-86a0-89ff67b106eb",
     "ClusterUrl": "https://ingest-gde003.kusto.windows.net",
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47"
