--- a/StewardClient/app-prod/manifest.json
+++ b/StewardClient/app-prod/manifest.json
@@ -10,7 +10,7 @@
   "location": {
     "support": {
       "nav_bar": "https://steward-ui-prod.azurewebsites.net/navbar-app/tools",
-      "ticket_sidebar": "https://steward-ui-prod.azurewebsites.net/ticket-sidebar",
+      "ticket_sidebar": "https://steward-ui-prod.azurewebsites.net/ticket-app/title",
       "background": "assets/background.html"
     }
   },
