--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -56,9 +56,11 @@
     "@ngxs/store": "^3.7.0",
     "@types/faker": "^5.1.3",
     "@types/json-bigint": "^1.0.0",
+    "@types/moment": "^2.13.0",
     "core-js": "^3.6.5",
     "faker": "^5.1.0",
     "json-bigint": "^1.0.0",
+    "moment": "^2.29.1",
     "msal": "^1.4.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.1",
