styled ui and fixed tests. all hookuped to identity services now

--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -15,7 +15,7 @@
     "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
     "test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
     "test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
-    "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
+    "test:ff": "ng test --karma-config=src/karma-firefox.conf.js",
     "test:ado": "ng test --code-coverage --karma-config=src/karma-ado.conf.js",
     "test:ado:ncc": "ng test --karma-config=src/karma-ado.conf.js",
     "build:dev": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
@@ -101,7 +101,7 @@
     "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "~1.2.0",
