--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -15,7 +15,7 @@
     "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
     "test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
     "test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
-    "test:ff": "ng test --karma-config=src/karma-firefox.conf.js",
+    "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
     "test:ado": "ng test --code-coverage --karma-config=src/karma-ado.conf.js",
     "test:ado:ncc": "ng test --karma-config=src/karma-ado.conf.js",
     "build:dev": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
