Get the tests working in CI again

--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -16,7 +16,7 @@
     "test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
     "test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
     "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
-    "test:ado": "ng test --code-coverage --karma-config=src/karma-ado.conf.js",
+    "test:ado": "ng test --karma-config=src/karma-ado.conf.js --code-coverage --watch false",
     "test:ado:ncc": "ng test --karma-config=src/karma-ado.conf.js",
     "build:dev": "(ng build --prod --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
     "build:dev:configMoveToBuild": "cp web.config dist/",
@@ -100,6 +100,7 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.0.3",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "~1.1.2",
