--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -106,6 +106,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "~1.2.0",
     "karma-nightmare": "~0.4.15",
+    "karma-spec-reporter": "^0.0.32",
     "logops": "~2.1.0",
     "make-runnable": "~1.3.6",
     "prettier": "2.1.1",
