--- a/nuget.config
+++ b/nuget.config
@@ -3,7 +3,7 @@
   <packageSources>
     <clear />
 
-    <add key="Turn10-Services-Build" value="https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services-Build/nuget/v3/index.json" />
+    <add key="Turn10-Services" value="https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services/nuget/v3/index.json" />
 
   </packageSources>
 </configuration>
