--- a/StewardClient/app-local/manifest.json
+++ b/StewardClient/app-local/manifest.json
@@ -9,8 +9,8 @@
   "private": true,
   "location": {
     "support": {
-      "nav_bar": "http://localhost:4200/navbar-app/tools",
-      "ticket_sidebar": "http://localhost:4200/ticket-app/title",
+      "nav_bar": "http://localhost:4200/support/navbar-app/tools",
+      "ticket_sidebar": "http://localhost:4200/support/ticket-app/title",
       "background": "assets/background.html"
     }
   },
