--- a/StewardClient/app-prod/manifest.json
+++ b/StewardClient/app-prod/manifest.json
@@ -9,8 +9,8 @@
   "private": true,
   "location": {
     "support": {
-      "nav_bar": "https://steward-ui-prod.azurewebsites.net/navbar-app/tools",
-      "ticket_sidebar": "https://steward-ui-prod.azurewebsites.net/ticket-app/title",
+      "nav_bar": "https://steward-ui-prod.azurewebsites.net/support/navbar-app/tools",
+      "ticket_sidebar": "https://steward-ui-prod.azurewebsites.net/support/ticket-app/title",
       "background": "assets/background.html"
     }
   },
