not working state

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -6,6 +6,9 @@
     "ClientId": "cfe0ac3f-d0a7-4566-99f7-0c56b7a9f7d4",
     "ClientSecret": "<client-secret>"
   },
+  "ApplicationInsights": {
+    "InstrumentationKey": "18e41d53-e8c7-465e-808d-ec4b1f9e5812"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
