--- a/StewardApi/appsettings.json
+++ b/StewardApi/appsettings.json
@@ -6,6 +6,10 @@
     "ClientId": "796faca8-01de-436e-b75e-fb981756d5ed",
     "ClientSecret": "<client-secret>"
   },
+  "ApplicationInsights": {
+    // TODO: Convert this to PROD environment
+    "InstrumentationKey": "18e41d53-e8c7-465e-808d-ec4b1f9e5812"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
