--- a/nuget.config
+++ b/nuget.config
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
 
     <add key="Turn10-Services" value="https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services/nuget/v3/index.json" />
 
+    <add key="Nuget" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
