Wires AzureDevOpsFactory to DI container and adds skeleton endpoint for message of the day. WIP 1

--- a/StewardApi/appsettings.json
+++ b/StewardApi/appsettings.json
@@ -110,5 +110,11 @@
     "SteelheadDefault": "dev",
     "WoodstockDefault": "prod",
     "SunriseDefault": "prod"
+  },
+  "Git": {
+    "SteelheadContentAccessToken": "steelhead-content-access-token",
+    "SteelheadContentProjectId": "<project id>",
+    "SteelheadContentRepoId": "<repo id",
+    "SteelheadContentOrganizationUrl": "<url>"
   }
 }
