--- a/StewardApi/appsettings.json
+++ b/StewardApi/appsettings.json
@@ -116,6 +116,7 @@
     "SteelheadContentProjectId": "7d00c248-a125-46e0-b3b3-32389ce2233d",
     "SteelheadContentRepoId": "49ff9955-e744-4b14-b646-30ff5c0d2ca6",
     "SteelheadContentOrganizationUrl": "https://dev.azure.com/turn10",
-    "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml"
+    "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
+    "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml"
   }
 }
