pull all playfab builds from specified environment

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -106,5 +106,9 @@
     "SteelheadContentOrganizationUrl": "https://dev.azure.com/turn10",
     "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
     "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml"
+  },
+  "PlayFab": {
+    "Api": "playfab-api",
+    "Key": "playfab-api-key"
   }
 }
