--- a/StewardApi/appsettings.json
+++ b/StewardApi/appsettings.json
@@ -60,7 +60,13 @@
     "Sandbox": "RETAIL",
     "ClientVersion": "1",
     "AdminXuid": "3",
-    "TitleId": "2030093255"
+    "TitleId": "2030093255",
+    "PlayFab": {
+      "Dev": {
+        "TitleId": "playfab-woodstock-dev-title",
+        "Key": "playfab-woodstock-dev-key"
+      }
+    }
   },
   "SteelheadEnvironment": {
     "Uri": "https://Steelhead-10.dev.Services.forzamotorsport.net/Services/o.xtsw",
@@ -106,5 +112,5 @@
     "SteelheadContentOrganizationUrl": "https://dev.azure.com/turn10",
     "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
     "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml"
-  }
+  },
 }
