base setup for new cosmos db

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -50,6 +50,10 @@
     "TableName": "StewardUser",
     "ConnectionString": ""
   },
+  "PlayFabBuildLocksStorageProperties": {
+    "TableName": "PlayFabBuildLocks",
+    "ConnectionString": ""
+  },
   "Sts": {
     "Url": "https://sts.services.forzamotorsport.net/UserToken",
     "SecretName": "web-client"
