--- a/StewardApi/appsettings.json
+++ b/StewardApi/appsettings.json
@@ -50,6 +50,10 @@
     "TableName": "StewardUser",
     "ConnectionString": ""
   },
+  "PlayFabBuildLocksStorageProperties": {
+    "TableName": "PlayFabBuildLocks",
+    "ConnectionString": ""
+  },
   "Sts": {
     "Url": "https://sts.services.forzamotorsport.net/UserToken",
     "SecretName": "web-client"
@@ -112,5 +116,5 @@
     "SteelheadContentOrganizationUrl": "https://dev.azure.com/turn10",
     "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
     "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml"
-  },
+  }
 }
