Get localization categories WIP

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -106,6 +106,7 @@
     "SteelheadContentOrganizationUrl": "https://dev.azure.com/turn10",
     "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
     "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml",
-    "SteelheadFormatPipelineBuildDefinition": "376"
+    "SteelheadFormatPipelineBuildDefinition": "376",
+    "SteelheadLocalizationFolderPath": "/Source/Localization"
   }
 }
