use correct app settings

--- a/StewardApi/appsettings.Development.json
+++ b/StewardApi/appsettings.Development.json
@@ -64,7 +64,13 @@
     "Sandbox": "RETAIL",
     "ClientVersion": "1",
     "AdminXuid": "3",
-    "TitleId": "2030093255"
+    "TitleId": "2030093255",
+    "PlayFab": {
+      "Dev": {
+        "TitleId": "playfab-woodstock-dev-title",
+        "Key": "playfab-woodstock-dev-key"
+      }
+    }
   },
   "SteelheadEnvironment": {
     "Uri": "https://Steelhead-11.dev.Services.forzamotorsport.net/Services/o.xtsw",
@@ -111,9 +117,5 @@
     "SteelheadMessageOfTheDayPath": "/Source/UserMessages/MessageOfTheDay.xml",
     "SteelheadWorldOfForzaPath": "/Source/WorldOfForza/WoFTileImageText.xml",
     "SteelheadFormatPipelineBuildDefinition": "376"
-  },
-  "PlayFab": {
-    "Api": "playfab-api",
-    "Key": "playfab-api-key"
   }
 }
