--- a/StewardApi/StewardApi.csproj
+++ b/StewardApi/StewardApi.csproj
@@ -144,6 +144,10 @@
     <ProjectReference Include="..\StewardGitApi\StewardGitApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Executables\" />
+  </ItemGroup>
+
   <Target Name="RealClean" AfterTargets="Clean">
     <RemoveDir Directories="$(OutDir)" ContinueOnError="true" />
   </Target>
