--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -41,7 +41,8 @@
     "test:cypress:prod": "cypress open --config-file cypress/configs/prod.json",
     "test:cypress:prod-staging": "cypress open --config-file cypress/configs/prod-staging.json",
     "build": "yarn run build:dev",
-    "build:dev": "(ng build --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
+    "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --crossOrigin=anonymous && yarn run build:dev:configMoveToBuild",
+    "build:dev:old": "(ng build --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
     "build:dev:configMoveToBuild": "cp web.config dist/",
     "build:prod": "(ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true) && yarn run build:dev:configMoveToBuild",
     "open:navbar": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true",
